--- a/web-thu/styles/scss/_ty.scss
+++ b/web-thu/styles/scss/_ty.scss
@@ -331,92 +331,15 @@ body .swiper-container-horizontal>.swiper-pagination-bullets .swiper-pagination-
   }
 }
 
-.ty-general {
-  width: 100%;
-  padding: 96px 0 150px;
-  position: relative;
-  overflow: hidden;
-
-  .ty-title {
-    margin-bottom: 60px;
-  }
-
-  .in {
-    width: 1060px;
-    height: 720px;
-    margin: 0 auto;
-    position: relative;
-
-    .img {
-      width: 100000px;
-      height: 100%;
-      overflow: hidden;
-    }
-
-    img {
-      height: 120%;
-      display: block;
-    }
-
-    p {
-      width: 496px;
-      background: #fff;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      padding: 68px 82px 147px 0;
-      font-size: 18px;
-      color: rgba(18, 18, 18, 1);
-      line-height: 36px;
-    }
-
-    a {
-      position: absolute;
-      left: -15px;
-      bottom: 0;
-    }
-  }
-}
-
 .ty-training {
   width: 100%;
   padding: 130px 0 170px;
   height: 768-300px;
   background-size: cover;
   background-position: center;
-  background-image: url(../images/new/ll.png);
+  background-image: url(../images-2/about-detial.png);
   position: relative;
   overflow: hidden;
-
-  img {
-    position: absolute;
-    height: 100%;
-    left: 50%;
-    top: 0;
-    transform: translateX(-50%);
-  }
-
-  .in {
-    width: 712px;
-    margin: 0 auto;
-    font-size: 18px;
-    color: rgba(18, 18, 18, 1);
-    line-height: 30px;
-    position: relative;
-    z-index: 2;
-
-    h3 {
-      margin-bottom: 30px;
-    }
-
-    p {
-      margin-bottom: 30px;
-    }
-
-    a {
-      margin: 65px auto 0;
-    }
-  }
 }
 
 .bdsharebuttonbox {
@@ -469,11 +392,8 @@ body .swiper-container-horizontal>.swiper-pagination-bullets .swiper-pagination-
     }
 
     a {
-      position: absolute;
-      bottom: 70px;
-      left: -14px;
-      width: 526px;
-      background-image: url(../images/new/bk-bar2.png);
+      display: block;
+      margin:  24px auto;
 
       &:hover {
         font-size: 21px;
@@ -1120,205 +1040,13 @@ body .swiper-container-horizontal>.swiper-pagination-bullets .swiper-pagination-
 }
 
 // 招生
-.ty-zs {
-  text-align: right;
-  min-width: 1200px;
-  overflow: hidden;
-  margin-bottom: 100px;
 
-  .ty-title {
-    padding: 80px 0 60px;
-  }
 
-  .img-in {
-    width: 100000px;
-    height: 660px;
-    overflow: hidden;
-  }
-
-  .img {
-    width: 1190px;
-    height: 660px;
-    margin: 0 auto;
-
-    img {
-      width: 1900px;
-      margin-left: 130px;
-      margin-top: -150px;
-      display: block;
-    }
-  }
-
-  .in {
-    position: absolute;
-    left: 10%;
-    bottom: 100px;
-    width: 380px;
-    padding: 70px 100px 100px 100px;
-    text-align: left;
-    background: #fff;
-  }
-
-  .container-2 {
-    width: 100%;
-  }
-
-  h3 {
-    font-size: 30px;
-    font-weight: bold;
-    color: rgba(0, 0, 0, 1);
-    line-height: 32px;
-    margin-bottom: 40px;
-  }
-
-  li {
-    font-size: 18px;
-    font-weight: 400;
-    color: rgba(18, 18, 18, 1);
-    line-height: 24px;
-    margin-bottom: 24px;
-    cursor: pointer;
-
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
-
-  .sp {
-    @extend .clearfix;
-
-    em {
-      float: left;
-      height: 48px;
-      line-height: 48px;
-    }
-
-    span {
-      float: left;
-    }
-  }
-
-  em {
-    font-size: 30px;
-    font-family: Roboto-LightItalic;
-    font-weight: normal;
-    color: rgba(6, 52, 86, 1);
-    display: inline-block;
-    vertical-align: middle;
-    margin-right: 32px;
-    font-style: italic;
-  }
-
-  .strong,
-  li:hover {
-    em {
-      font-weight: bold;
-    }
-
-    span {
-      color: rgba(6, 52, 86, 1);
-    }
-
-    font-weight: bold;
-  }
-
-  .ty-more {
-    position: absolute;
-    text-align: center;
-    bottom: -29px;
-    left: 100px;
-  }
-}
-
-.ty-download {
-  background: rgba(243, 243, 246, 1);
-  padding: 84px 0 140+64px;
-  margin-bottom: -117px;
-
-  .warp {
-    width: 1200px;
-    margin: 0 auto;
-    margin-top: 52px;
-    position: relative;
-  }
-
-  .img,
-  img {
-    width: 664px;
-    height: 476px;
-    display: block;
-    overflow: hidden;
-  }
-
-  .in {
-    position: absolute;
-    top: 64px;
-    right: 0;
-    background: #fff;
-    padding: 60px 80px;
-    width: 500px;
-    line-height: 80px;
-
-    li {
-      font-size: 18px;
-      height: 80px;
-      color: rgba(0, 0, 0, 1);
-      border-bottom: 1px solid rgba(0, 0, 0, .15);
-    }
-
-    .time {
-      font-size: 18px;
-      color: rgba(0, 0, 0, .7);
-      font-style: italic;
-      margin-right: 40px;
-    }
-
-    .name {
-      @extend .one_cut;
-      display: inline-block;
-      height: 100%;
-      vertical-align: top;
-      width: 270px;
-    }
-
-    .download {
-      float: right;
-      width: 35px;
-      height: 35px;
-      line-height: 35px;
-      text-align: center;
-      margin-top: 22.5px;
-      display: block;
-      background: #C6C6C6;
-      color: #fff;
-      font-size: 24px;
-      transition: all .3s;
-
-      &:hover {
-        background: #063456;
-      }
-    }
-  }
-
-  .ty-more {
-    position: absolute;
-    left: 80px;
-    bottom: -29px;
-  }
-}
 
 .add-more {
   padding-top: 30px;
 
   a {
     margin: 0 auto;
-  }
-}
-
-@media screen and (min-width:1020px) and (max-width:1680px) {
-  .ty-zs .img img {
-    width: auto;
-    height: 100%;
-    margin-top: 0;
   }
 }
